@@ -7,6 +7,7 @@ then you win. –- Mahatma Gandhi
 Sat, Aug 8, 2009
 ---------------------------------------------------------------------
 - Added :before_destroy filters for User model.
+- Implemented deleting users in Admin interface.
 
 Wed, Aug 5, 2009
 ---------------------------------------------------------------------
